--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,8 @@
         }
     ],
     "require": {
-        "php": ">=7.1.3",
-        "illuminate/support": "^5.3",
+        "php": "^7.1.3",
+        "illuminate/support": "5.7.x",
         "caffeinated/modules": "^5.0",
         "laravelcollective/html": "^5.3"
     },
