--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,9 @@
         "laravelcollective/html": "^5.3"
     },
     "require-dev": {
-        "mockery/mockery": "^0.9.6",
-        "phpunit/phpunit": "^5.7",
-        "orchestra/testbench": "^3.3"
+        "mockery/mockery": "^1.0",
+        "phpunit/phpunit": "~7.0",
+        "orchestra/testbench": "^3.6"
     },
     "autoload": {
         "psr-4": {
